Resized logo, fixing text spacing

--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,7 @@
 
  #logo {
    width: 200px;
+   padding: 20px 20px;
  }
 
  nav {
